update s2pxmcmc details

--- a/content/publication/marignier-s2-pxmcmc/cite.bib
+++ b/content/publication/marignier-s2-pxmcmc/cite.bib
@@ -1,8 +1,14 @@
-@article{Marignier2022,
-   author = {Marignier, Augustin and McEwen, Jason D and Ferreira, Ana MG and Kitching, Thomas},
-   title = {Posterior sampling for inverse imaging problems on the sphere in seismology and cosmology},
-   journal = {Royal Astronomical Society Techniques and Instruments (under review)},
-   DOI = {arXiv:2107.06500},
-   year = {2022},
-   type = {Journal Article}
+@article{Marignier2023,
+    author = {Marignier, Augustin and McEwen, Jason D and Ferreira, Ana M G and Kitching, Thomas D},
+    title = "{Posterior sampling for inverse imaging problems on the sphere in seismology and cosmology}",
+    journal = {RAS Techniques and Instruments},
+    volume = {2},
+    number = {1},
+    pages = {20-32},
+    year = {2023},
+    month = {01},
+    issn = {2752-8200},
+    doi = {10.1093/rasti/rzac010},
+    url = {https://doi.org/10.1093/rasti/rzac010},
+    eprint = {https://academic.oup.com/rasti/article-pdf/2/1/20/48831485/rzac010.pdf},
 }
