--- a/publication/marignier-tdtmm/cite.bib
+++ b/publication/marignier-tdtmm/cite.bib
@@ -1,6 +1,8 @@
-@article{Marignier2022,
+@article{Marignier2023,
   title={Sparse Bayesian mass-mapping using trans-dimensional MCMC},
   author={Marignier, Augustin and Kitching, Thomas and McEwen, Jason D and Ferreira, Ana MG},
-  journal={arXiv preprint arXiv:2211.13963},
-  year={2022}
+  journal={The Open Journal of Astrophysics},
+  volume={6},
+  year={2022},
+  doi={10.21105/astro.2211.13963}
 }
